Fix overlappinf inline code bg on consecutive lines

--- a/Sources/SwiftMarkdownView/Resources/default-macOS.css
+++ b/Sources/SwiftMarkdownView/Resources/default-macOS.css
@@ -467,7 +467,7 @@
 
 #markdown-rendered code,
 #markdown-rendered tt {
-    padding: 0.2em 0.4em;
+    padding: 0.1em 0.3em;
     margin: 0;
     font-size: 90%;
     white-space: break-spaces;
